--- a/package.json
+++ b/package.json
@@ -13,22 +13,38 @@
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "babel-polyfill": "^6.26.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": ">3.8.1",
+    "less-loader": "^4.1.0",
+    "prop-types": "^15.6.2",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.16",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.8.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^1.0.1",
+    "bootstrap": "^4.1.3",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-progress-2": "^4.4.3",
     "style-loader": "^0.23.1"
   }
 }
