--- a/package.json
+++ b/package.json
@@ -34,17 +34,22 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-css-modules-transform": "^1.6.2",
+    "babel-plugin-react-css-modules": "^5.2.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "^4.1.3",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
+    "html-react-parser": "^0.6.3",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-progress-2": "^4.4.3",
+    "react-router": "^5.0.0",
     "style-loader": "^0.23.1"
   }
 }
