--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-webpack4-template",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "just template",
   "main": "index.js",
   "author": "darkdelirium",
@@ -10,14 +10,11 @@
     "build": "webpack -p"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-polyfill": "^6.26.0",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "babel-register": "^6.26.0",
     "html-webpack-plugin": "^3.2.0",
     "less": ">3.8.1",
     "less-loader": "^4.1.0",
@@ -28,28 +25,16 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.16",
-    "@fortawesome/free-regular-svg-icons": "^5.5.0",
-    "@fortawesome/free-solid-svg-icons": "^5.8.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "autoprefixer": "^9.5.0",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-react-css-modules": "^5.2.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.4.1",
     "file-loader": "^3.0.1",
-    "html-react-parser": "^0.6.3",
+    "html-react-parser": "^0.10.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-flexbox-grid": "^2.1.2",
-    "react-progress-2": "^4.4.3",
-    "react-router": "^5.0.0",
-    "style-loader": "^0.23.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-svg": "^11.0.4",
+    "style-loader": "^1.1.2"
   }
 }
